<resources>
    <string name="app_name">OpenEvents</string>
    <string name="titleApp">OpenEvents</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_my_events">My events</string>
    <string name="menu_my_timeline">My Timeline</string>
    <string name="menu_my_messages">My messages</string>
    <string name="menu_search_users">Search users</string>
    <string name="menu_explore">Events</string>
    <string name="title_activity_new_event">New Event</string>
    <string name="title_activity_event">Event</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_user">User</string>
</resources>