<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.williambastos.openevents.ui.home.HomeFragment"
        android:label="@string/menu_explore"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_events"
        android:name="com.williambastos.openevents.ui.my_events.MyEventsFragment"
        android:label="@string/menu_my_events"
        tools:layout="@layout/fragment_my_events" />

    <fragment
        android:id="@+id/nav_my_timeline"
        android:name="com.williambastos.openevents.ui.my_timeline.MyTimelineFragment"
        android:label="@string/menu_my_timeline"
        tools:layout="@layout/fragment_my_timeline" />

    <fragment
        android:id="@+id/nav_my_messages"
        android:name="com.williambastos.openevents.ui.my_messages.MyMessagesFragment"
        android:label="@string/menu_my_messages"
        tools:layout="@layout/fragment_my_messages" />

    <fragment
        android:id="@+id/nav_search_users"
        android:name="com.williambastos.openevents.ui.search_users.SearchUsersFragment"
        android:label="@string/menu_search_users"
        tools:layout="@layout/fragment_search_users" />
</navigation>